syntax = "proto3";
package gradlegRPC;
option java_package = "io.grpc.fleetClients";


service FleetClientsService {
  rpc gCriticalPoint(getCriticalPointRequestMessage) returns (getCriticalPointResponseMessage);
  /////////////////////////////
  rpc message(requestMessage) returns (responseMessage){}
  rpc greetingMessage(makeGreeting) returns (greetingResponse){}
  rpc grobotReport(robotReportRequest) returns (robotReportResponse);
  rpc coordinatorrobotreport(coordinatorrequestrobotid) returns (coordinatorrespondrobotreport);
  rpc clientCriticalpoint(clientGetCriticalPointRequestMessage) returns (clientGetCriticalPointResponseMessage);

  // Lesh
  //rpc trajectoryEnv(requestTrajectoryEnvelope) returns (respondTrajectoryEnvelope);

}

message getCriticalPointRequestMessage{
  int32 robotID = 1;
  int32 criticalPoint = 2;
}

message getCriticalPointResponseMessage{
  int32 criticalPoint = 1;
}

/////////////////////////////////////////

message requestMessage {
  string name = 1;
}

message responseMessage {
  string name = 1;
}

message makeGreeting {
  string kan = 1;
  int32 robotID = 2;
  string type = 3;
  string IP = 4;
  int32 port = 5;
  robotPose rpose = 6;
  // footPrint
  string timeStamp = 7;
  double maxAccel = 8;
  double maxVel = 9;
  double trackingPeriodInMillis = 10;
  MakeFootPrint makeFootPrint = 11;
}

message robotPose {
  double x = 1;
  double y = 2;
  double z = 3;
  double roll = 4;
  double pitch = 5;
  double yaw = 6;
}

message MakeFootPrint {
  int32 centerX = 1;
  int32 centerY = 2;
  int32 minVerts = 3;
  int32 maxVerts = 4;
  double minRadius = 5;
  double maxRadius = 6;
}

message greetingResponse {
  string name = 1;
}

message robotReportRequest {
  string kan = 1; // for typing (my robotReport) in the request; so in server we look for a request that starts with (my robotReport)
  int32 robotID = 2;
}

message robotReportResponse {
  int32 robotID = 1;
  double x = 2;
  double y = 3;
  double z = 4;
  double roll = 5;
  double pitch = 6;
  double yaw = 7;
  int32 pathIndex = 8;
  double velocity = 9;
  double distanceTraveled = 10;
  int32 criticalPoint = 11;
}

message coordinatorrequestrobotid{
  string req = 1;
  int32 robotid = 2;
  double x = 3;
  double y = 4;
  double z = 5;
  double roll = 6;
  double pitch = 7;
  double yaw = 8;
  int32 pathIndex = 9;
  double velocity = 10;
  double distanceTraveled = 11;
  int32 criticalPoint = 12;
}

message coordinatorrespondrobotreport {
  string kan = 1;
  int32 robotID= 2;
}


message clientGetCriticalPointRequestMessage {
  string kan = 1;
  int32 robotID = 2;
}

message clientGetCriticalPointResponseMessage {
  int32 criticalPoint = 1;
}
/*
message requestTrajectoryEnvelope{
  string kan = 1;
  bytes serializedTe = 2;
}


message respondTrajectoryEnvelope{
  string end = 1;

}*/

